--- a/src/visualization/AnalyticsDelayUI.form
+++ b/src/visualization/AnalyticsDelayUI.form
@@ -287,10 +287,11 @@
                 <Component class="javax.swing.JComboBox" name="computationMethodComboBox">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="3">
+                      <StringArray count="4">
                         <StringItem index="0" value="Frechet Matching"/>
                         <StringItem index="1" value="Identity Matching"/>
                         <StringItem index="2" value="Dynamic Time Warping"/>
+                        <StringItem index="3" value="Edit Distance on Real"/>
                       </StringArray>
                     </Property>
                   </Properties>
