Propagating new epsilon values to compute a new matching

--- a/src/visualization/AnalyticsDelayUI.form
+++ b/src/visualization/AnalyticsDelayUI.form
@@ -319,6 +319,7 @@
                     <Property name="text" type="java.lang.String" value="1.7"/>
                   </Properties>
                   <Events>
+                    <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="epsFieldCaretUpdate"/>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="epsFieldActionPerformed"/>
                     <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="epsFieldPropertyChange"/>
                   </Events>
